# uwu-meter

./: .env.example  .gitignore  Cargo.toml  README.md  Secrets.toml.example
.sqlx/: query-09c653b868800bdefabd8e6db66be80f21a83ab66ecb68ccedf7beee429290da.json  query-74608d353f1f8818e43f428b58c5996908a3a1ca2a6be212624bdcc45cb71ea7.json  query-a0caf012a91ce19bae7b30e5adf36b7843cc2fd0277b72af9d33fae5a53bf1b8.json
migrations/: 20250528061154_create_uwu_data.sql
src/: main.rs
src/commands/: mod.rs  uwuexport.rs  uwulead.rs  uwume.rs  uwumeeter.rs  uwureset.rs
