[package]
name = "uwu-meter"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
# reqwest = { version = "0.11.24", features = ["json"] }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
tokio = "1.26.0"
tracing = "0.1.37"

# save and load datas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-persist = "0.45.0"
